GuidedTokenGeneration/SimpleSQLParser.py
# Generated from SimpleSQL.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SimpleSQLParser ( Parser ):

    grammarFileName = "SimpleSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "')'", "'='", "'<>'", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
                     "'/'", "'.'", "<INVALID>", "'SELECT'", "'FROM'", "'WHERE'", 
                     "'GROUP'", "'BY'", "'ORDER'", "'ASC'", "'DESC'", "'JOIN'", 
                     "'ON'", "'LIMIT'", "'AND'", "'OR'", "'NOT'", "'AS'", 
                     "'IS'", "'NULL'", "'IN'", "'BETWEEN'", "'LEFT'", "'RIGHT'", 
                     "'FULL'", "'INNER'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "JOIN_TYPE", "SELECT", "FROM", "WHERE", "GROUP", "BY", 
                      "ORDER", "ASC", "DESC", "JOIN", "ON", "LIMIT", "AND", 
                      "OR", "NOT", "AS", "IS", "NULL", "IN", "BETWEEN", 
                      "LEFT", "RIGHT", "FULL", "INNER", "USER_DEFINED_NUMBER", 
                      "USER_DEFINED_STRING", "IDENT", "WS" ]

    RULE_query = 0
    RULE_select_stmt = 1
    RULE_selectExpr = 2
    RULE_select_item = 3
    RULE_fromExpr = 4
    RULE_table_ref = 5
    RULE_join_sequence = 6
    RULE_simple_table = 7
    RULE_join_op = 8
    RULE_whereExpr = 9
    RULE_groupByExpr = 10
    RULE_orderByExpr = 11
    RULE_order_item = 12
    RULE_limitExpr = 13
    RULE_bool_expr = 14
    RULE_bool_term = 15
    RULE_bool_factor = 16
    RULE_comparison_predicate = 17
    RULE_comparison_op = 18
    RULE_expr = 19
    RULE_additive_expr = 20
    RULE_multiplicative_expr = 21
    RULE_unary_expr = 22
    RULE_primary_expr = 23
    RULE_function_call = 24
    RULE_column_name = 25
    RULE_literal = 26

    ruleNames =  [ "query", "select_stmt", "selectExpr", "select_item", 
                   "fromExpr", "table_ref", "join_sequence", "simple_table", 
                   "join_op", "whereExpr", "groupByExpr", "orderByExpr", 
                   "order_item", "limitExpr", "bool_expr", "bool_term", 
                   "bool_factor", "comparison_predicate", "comparison_op", 
                   "expr", "additive_expr", "multiplicative_expr", "unary_expr", 
                   "primary_expr", "function_call", "column_name", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    JOIN_TYPE=16
    SELECT=17
    FROM=18
    WHERE=19
    GROUP=20
    BY=21
    ORDER=22
    ASC=23
    DESC=24
    JOIN=25
    ON=26
    LIMIT=27
    AND=28
    OR=29
    NOT=30
    AS=31
    IS=32
    NULL=33
    IN=34
    BETWEEN=35
    LEFT=36
    RIGHT=37
    FULL=38
    INNER=39
    USER_DEFINED_NUMBER=40
    USER_DEFINED_STRING=41
    IDENT=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_stmt(self):
            return self.getTypedRuleContext(SimpleSQLParser.Select_stmtContext,0)


        def EOF(self):
            return self.getToken(SimpleSQLParser.EOF, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = SimpleSQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.select_stmt()
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 55
                self.match(SimpleSQLParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SimpleSQLParser.SELECT, 0)

        def selectExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.SelectExprContext,0)


        def fromExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.FromExprContext,0)


        def whereExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereExprContext,0)


        def groupByExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.GroupByExprContext,0)


        def orderByExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.OrderByExprContext,0)


        def limitExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.LimitExprContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)




    def select_stmt(self):

        localctx = SimpleSQLParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(SimpleSQLParser.SELECT)
            self.state = 59
            self.selectExpr()
            self.state = 60
            self.fromExpr()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.WHERE:
                self.state = 61
                self.whereExpr()


            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.GROUP:
                self.state = 64
                self.groupByExpr()


            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.ORDER:
                self.state = 67
                self.orderByExpr()


            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.LIMIT:
                self.state = 70
                self.limitExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Select_itemContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Select_itemContext,i)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_selectExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectExpr" ):
                listener.enterSelectExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectExpr" ):
                listener.exitSelectExpr(self)




    def selectExpr(self):

        localctx = SimpleSQLParser.SelectExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_selectExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.select_item()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSQLParser.T__0:
                self.state = 74
                self.match(SimpleSQLParser.T__0)
                self.state = 75
                self.select_item()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SimpleSQLParser.ExprContext,0)


        def AS(self):
            return self.getToken(SimpleSQLParser.AS, 0)

        def IDENT(self):
            return self.getToken(SimpleSQLParser.IDENT, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_select_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_item" ):
                listener.enterSelect_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_item" ):
                listener.exitSelect_item(self)




    def select_item(self):

        localctx = SimpleSQLParser.Select_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.expr()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.AS:
                self.state = 82
                self.match(SimpleSQLParser.AS)
                self.state = 83
                self.match(SimpleSQLParser.IDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SimpleSQLParser.FROM, 0)

        def table_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Table_refContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Table_refContext,i)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_fromExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromExpr" ):
                listener.enterFromExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromExpr" ):
                listener.exitFromExpr(self)




    def fromExpr(self):

        localctx = SimpleSQLParser.FromExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fromExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(SimpleSQLParser.FROM)
            self.state = 87
            self.table_ref()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSQLParser.T__0:
                self.state = 88
                self.match(SimpleSQLParser.T__0)
                self.state = 89
                self.table_ref()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_table(self):
            return self.getTypedRuleContext(SimpleSQLParser.Simple_tableContext,0)


        def join_sequence(self):
            return self.getTypedRuleContext(SimpleSQLParser.Join_sequenceContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_table_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_ref" ):
                listener.enterTable_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_ref" ):
                listener.exitTable_ref(self)




    def table_ref(self):

        localctx = SimpleSQLParser.Table_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_table_ref)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.simple_table()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.JOIN_TYPE or _la==SimpleSQLParser.JOIN:
                self.state = 96
                self.join_sequence()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Join_sequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def join_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Join_opContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Join_opContext,i)


        def simple_table(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Simple_tableContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Simple_tableContext,i)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_join_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoin_sequence" ):
                listener.enterJoin_sequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoin_sequence" ):
                listener.exitJoin_sequence(self)




    def join_sequence(self):

        localctx = SimpleSQLParser.Join_sequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_join_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99
                self.join_op()
                self.state = 100
                self.simple_table()
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleSQLParser.JOIN_TYPE or _la==SimpleSQLParser.JOIN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_tableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.IDENT)
            else:
                return self.getToken(SimpleSQLParser.IDENT, i)

        def AS(self):
            return self.getToken(SimpleSQLParser.AS, 0)

        def select_stmt(self):
            return self.getTypedRuleContext(SimpleSQLParser.Select_stmtContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_simple_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_table" ):
                listener.enterSimple_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_table" ):
                listener.exitSimple_table(self)




    def simple_table(self):

        localctx = SimpleSQLParser.Simple_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simple_table)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleSQLParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(SimpleSQLParser.IDENT)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SimpleSQLParser.AS:
                    self.state = 107
                    self.match(SimpleSQLParser.AS)
                    self.state = 108
                    self.match(SimpleSQLParser.IDENT)


                pass
            elif token in [SimpleSQLParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(SimpleSQLParser.T__1)
                self.state = 112
                self.select_stmt()
                self.state = 113
                self.match(SimpleSQLParser.T__2)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SimpleSQLParser.AS:
                    self.state = 114
                    self.match(SimpleSQLParser.AS)
                    self.state = 115
                    self.match(SimpleSQLParser.IDENT)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Join_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JOIN(self):
            return self.getToken(SimpleSQLParser.JOIN, 0)

        def ON(self):
            return self.getToken(SimpleSQLParser.ON, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(SimpleSQLParser.Bool_exprContext,0)


        def JOIN_TYPE(self):
            return self.getToken(SimpleSQLParser.JOIN_TYPE, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_join_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoin_op" ):
                listener.enterJoin_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoin_op" ):
                listener.exitJoin_op(self)




    def join_op(self):

        localctx = SimpleSQLParser.Join_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_join_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.JOIN_TYPE:
                self.state = 120
                self.match(SimpleSQLParser.JOIN_TYPE)


            self.state = 123
            self.match(SimpleSQLParser.JOIN)
            self.state = 124
            self.match(SimpleSQLParser.ON)
            self.state = 125
            self.bool_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SimpleSQLParser.WHERE, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(SimpleSQLParser.Bool_exprContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_whereExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereExpr" ):
                listener.enterWhereExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereExpr" ):
                listener.exitWhereExpr(self)




    def whereExpr(self):

        localctx = SimpleSQLParser.WhereExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whereExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SimpleSQLParser.WHERE)
            self.state = 128
            self.bool_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupByExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(SimpleSQLParser.GROUP, 0)

        def BY(self):
            return self.getToken(SimpleSQLParser.BY, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.ExprContext,i)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_groupByExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupByExpr" ):
                listener.enterGroupByExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupByExpr" ):
                listener.exitGroupByExpr(self)




    def groupByExpr(self):

        localctx = SimpleSQLParser.GroupByExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_groupByExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SimpleSQLParser.GROUP)
            self.state = 131
            self.match(SimpleSQLParser.BY)
            self.state = 132
            self.expr()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSQLParser.T__0:
                self.state = 133
                self.match(SimpleSQLParser.T__0)
                self.state = 134
                self.expr()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderByExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(SimpleSQLParser.ORDER, 0)

        def BY(self):
            return self.getToken(SimpleSQLParser.BY, 0)

        def order_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Order_itemContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Order_itemContext,i)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_orderByExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrderByExpr" ):
                listener.enterOrderByExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrderByExpr" ):
                listener.exitOrderByExpr(self)




    def orderByExpr(self):

        localctx = SimpleSQLParser.OrderByExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_orderByExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(SimpleSQLParser.ORDER)
            self.state = 141
            self.match(SimpleSQLParser.BY)
            self.state = 142
            self.order_item()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSQLParser.T__0:
                self.state = 143
                self.match(SimpleSQLParser.T__0)
                self.state = 144
                self.order_item()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Order_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SimpleSQLParser.ExprContext,0)


        def ASC(self):
            return self.getToken(SimpleSQLParser.ASC, 0)

        def DESC(self):
            return self.getToken(SimpleSQLParser.DESC, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_order_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrder_item" ):
                listener.enterOrder_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrder_item" ):
                listener.exitOrder_item(self)




    def order_item(self):

        localctx = SimpleSQLParser.Order_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_order_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.expr()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSQLParser.ASC or _la==SimpleSQLParser.DESC:
                self.state = 151
                _la = self._input.LA(1)
                if not(_la==SimpleSQLParser.ASC or _la==SimpleSQLParser.DESC):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LimitExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIMIT(self):
            return self.getToken(SimpleSQLParser.LIMIT, 0)

        def USER_DEFINED_NUMBER(self):
            return self.getToken(SimpleSQLParser.USER_DEFINED_NUMBER, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_limitExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLimitExpr" ):
                listener.enterLimitExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLimitExpr" ):
                listener.exitLimitExpr(self)




    def limitExpr(self):

        localctx = SimpleSQLParser.LimitExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_limitExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(SimpleSQLParser.LIMIT)
            self.state = 155
            self.match(SimpleSQLParser.USER_DEFINED_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Bool_termContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Bool_termContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.OR)
            else:
                return self.getToken(SimpleSQLParser.OR, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_bool_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_expr" ):
                listener.enterBool_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_expr" ):
                listener.exitBool_expr(self)




    def bool_expr(self):

        localctx = SimpleSQLParser.Bool_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bool_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.bool_term()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSQLParser.OR:
                self.state = 158
                self.match(SimpleSQLParser.OR)
                self.state = 159
                self.bool_term()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.Bool_factorContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.Bool_factorContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.AND)
            else:
                return self.getToken(SimpleSQLParser.AND, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_bool_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_term" ):
                listener.enterBool_term(self)
